// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Slider should render 1`] = `
<div>
  <div
    class="relative"
  >
    <div
      class="overflow-hidden px-5 -mx-5 -mb-8 list-none slide-container swiper-container-initialized swiper-container-horizontal"
      style="height: 224px;"
    >
      <div
        class="h-full swiper-wrapper important:z-0 "
        style="width: auto; transform: translate3d(NaNpx, 0px, 0px); transition-duration: 0ms;"
      >
        <div
          class="swiper-slide"
          style="height: 192px; margin-top: 0px;"
        >
          <div>
            Slider item
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Slider should render empty rows if template not provided 1`] = `
<div>
  <div
    class="relative"
  >
    <div
      class="overflow-hidden px-5 -mx-5 -mb-8 list-none slide-container swiper-container-initialized swiper-container-horizontal"
      style="height: 224px;"
    >
      <div
        class="h-full swiper-wrapper important:z-0 "
        style="width: auto; transform: translate3d(NaNpx, 0px, 0px); transition-duration: 0ms;"
      >
        <div
          class="swiper-slide"
          style="height: 192px; margin-top: 0px;"
        >
          <div />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Slider should render pagination 1`] = `
<div>
  <div
    class="relative"
  >
    <div
      class="overflow-hidden px-5 -mx-5 -mb-8 list-none slide-container swiper-container-initialized swiper-container-horizontal"
      style="height: 288px;"
    >
      <div
        class="h-full swiper-wrapper important:z-0 "
        style="width: auto; transform: translate3d(NaNpx, 0px, 0px); transition-duration: 0ms;"
      >
        <div
          class="swiper-slide"
          style="height: 192px; margin-top: 0px;"
        >
          <div />
        </div>
        <div
          class="swiper-slide"
          style="height: 192px; margin-top: 0px;"
        >
          <div />
        </div>
        <div
          class="swiper-slide"
          style="height: 192px; margin-top: 0px;"
        >
          <div />
        </div>
        <div
          class="swiper-slide"
          style="height: 192px; margin-top: 0px;"
        >
          <div />
        </div>
        <div
          class="swiper-slide"
          style="height: 192px; margin-top: 0px;"
        >
          <div />
        </div>
        <div
          class="swiper-slide"
          style="height: 192px; margin-top: 0px;"
        >
          <div />
        </div>
        <div
          class="swiper-slide"
          style="height: 192px; margin-top: 0px;"
        >
          <div />
        </div>
        <div
          class="swiper-slide"
          style="height: 192px; margin-top: 0px;"
        >
          <div />
        </div>
        <div
          class="swiper-slide"
          style="height: 192px; margin-top: 0px;"
        >
          <div />
        </div>
        <div
          class="swiper-slide"
          style="height: 192px; margin-top: 0px;"
        >
          <div />
        </div>
        <div
          class="swiper-slide"
          style="height: 192px; margin-top: 0px;"
        >
          <div />
        </div>
      </div>
      <div
        class="flex justify-center items-center h-6 swiper-pagination important:bottom-8 important:z-0 swiper-pagination-clickable swiper-pagination-bullets"
      />
    </div>
  </div>
</div>
`;

exports[`Slider should render pagination on top right 1`] = `
<div>
  <div
    class="relative"
  >
    <div
      class="flex absolute right-0 -top-12 items-center space-x-2 w-auto h-6 swiper-pagination swiper-pagination-clickable swiper-pagination-bullets"
    />
    <div
      class="overflow-hidden px-5 -mx-5 -mb-8 list-none slide-container swiper-container-initialized swiper-container-horizontal"
      style="height: 244px;"
    >
      <div
        class="h-full swiper-wrapper important:z-0 "
        style="width: auto; transform: translate3d(NaNpx, 0px, 0px); transition-duration: 0ms;"
      >
        <div
          class="swiper-slide"
          style="height: 192px; margin-top: 0px;"
        >
          <div />
        </div>
        <div
          class="swiper-slide"
          style="height: 192px; margin-top: 0px;"
        >
          <div />
        </div>
        <div
          class="swiper-slide"
          style="height: 192px; margin-top: 0px;"
        >
          <div />
        </div>
        <div
          class="swiper-slide"
          style="height: 192px; margin-top: 0px;"
        >
          <div />
        </div>
        <div
          class="swiper-slide"
          style="height: 192px; margin-top: 0px;"
        >
          <div />
        </div>
        <div
          class="swiper-slide"
          style="height: 192px; margin-top: 0px;"
        >
          <div />
        </div>
        <div
          class="swiper-slide"
          style="height: 192px; margin-top: 0px;"
        >
          <div />
        </div>
        <div
          class="swiper-slide"
          style="height: 192px; margin-top: 0px;"
        >
          <div />
        </div>
        <div
          class="swiper-slide"
          style="height: 192px; margin-top: 0px;"
        >
          <div />
        </div>
        <div
          class="swiper-slide"
          style="height: 192px; margin-top: 0px;"
        >
          <div />
        </div>
        <div
          class="swiper-slide"
          style="height: 192px; margin-top: 0px;"
        >
          <div />
        </div>
      </div>
    </div>
  </div>
</div>
`;
